--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="estilo.css">
 
 <header>
-  <img src="logo2.png" alt="Logo EletroProdutiva" class="logo">
+  <img src="logo.png" alt="Logo EletroProdutiva" class="logo">
 </header>
 
 </head>
