--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Como Criar um Carregador por Indução</title>
   <link rel="stylesheet" href="estilo.css">
+  <link rel="icon" type="image/png" href="favicon.png">
 
 <header>
   <img src="logo.png" alt="Logo EletroProdutiva" class="logo">
