--- a/contato.html
+++ b/contato.html
@@ -42,7 +42,7 @@
           <div class="card2">
             <h3>Fale Conosco</h3>
 
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=eletroprodutiva@gmail.com" target="_blank">
+            <a href="mailto:eletroprodutiva@gmail.com" target="_blank">
     <img src="email.png" alt="Enviar Email">
 </a>
           </div>
