--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <main>
     <section class="tutorial">
       <h3>Passo a Passo em Vídeo</h3>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/gq3H6Ukqomc?si=Kj-ZhNJkCKH_RVgx" 
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/cOHzmgEEgVw?si=6gf29L34MZecmyej" 
         title="Tutorial Carregador por Indução" frameborder="0" allowfullscreen></iframe>
     </section>
   </main>
