--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <h3>Portfólio do Produto</h3>
   <div class="portfolio-grid">
     <div class="item">
-      <img src="a456a55e-e3d1-4dff-8863-53dab7eedf56.png" alt="Carregador Por Indução">
+      <img src="Portifólio.png" alt="Carregador Por Indução">
       <p>...</p>
     </div>
   </div>
