--- a/index.html
+++ b/index.html
@@ -14,13 +14,23 @@
   <header>
     <h1>Como Criar um Carregador por Indução | DIY</h1>
   </header>
-  <main>
-    <section class="tutorial">
-      <h3>Passo a Passo em Vídeo</h3>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/cOHzmgEEgVw?si=6gf29L34MZecmyej" 
-        title="Tutorial Carregador por Indução" frameborder="0" allowfullscreen></iframe>
-    </section>
-  </main>
+<main>
+  <section class="tutorial">
+    <h3>Passo a Passo em Vídeo</h3>
+    
+    <!-- Vídeo principal -->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/cOHzmgEEgVw?si=6gf29L34MZecmyej" 
+      title="Tutorial Carregador por Indução" frameborder="0" allowfullscreen></iframe>
+
+    <!-- Vídeos adicionais menores -->
+    <div class="small-videos">
+      <iframe width="260" height="146" src="https://www.youtube.com/embed/ID_DO_VIDEO_1" 
+        title="Vídeo Extra 1" frameborder="0" allowfullscreen></iframe>
+      <iframe width="260" height="146" src="https://www.youtube.com/embed/ID_DO_VIDEO_2" 
+        title="Vídeo Extra 2" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </section>
+</main>
 
   <section class="portfolio">
   <h3>Portfólio do Produto</h3>
