--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     <!-- Vídeos adicionais menores -->
     <div class="small-videos">
-      <iframe width="260" height="146" src="https://www.youtube.com/embed/ID_DO_VIDEO_1" 
+      <iframe src="https://www.youtube.com/embed/ID_DO_VIDEO_1" 
         title="Vídeo Extra 1" frameborder="0" allowfullscreen></iframe>
-      <iframe width="260" height="146" src="https://www.youtube.com/embed/ID_DO_VIDEO_2" 
+      <iframe src="https://www.youtube.com/embed/ID_DO_VIDEO_2" 
         title="Vídeo Extra 2" frameborder="0" allowfullscreen></iframe>
     </div>
   </section>
