--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       title="Tutorial Carregador por Indução" frameborder="0" allowfullscreen></iframe>
 
     <!-- Vídeos adicionais menores -->
+    <h3>Vídeos de Referência</h3>
     <div class="small-videos">
       <iframe src="https://www.youtube.com/embed/ID_DO_VIDEO_1" 
         title="Vídeo Extra 1" frameborder="0" allowfullscreen></iframe>
