--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <!-- Vídeos adicionais menores -->
     <h3>Vídeos de Referência</h3>
     <div class="small-videos">
-      <iframe src="https://www.youtube.com/embed/ID_DO_VIDEO_1" 
+      <iframe src="https://www.youtube.com/embed/CvQircsxhOY?si=RgjLA9aF3rVwgaei" 
         title="Vídeo Extra 1" frameborder="0" allowfullscreen></iframe>
-      <iframe src="https://www.youtube.com/embed/ID_DO_VIDEO_2" 
+      <iframe src="https://www.youtube.com/embed/kL4O_2PuIeQ?si=VefTHAWVgFhtfFw-" 
         title="Vídeo Extra 2" frameborder="0" allowfullscreen></iframe>
     </div>
   </section>
